# agentcore-langchain-poc

./: .gitignore  README.md  amplify.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-agentcore-runtime.yml
agentcore-runtime/: Dockerfile  agent.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/src/api/: dependencies.py  main.py
backend/src/api/routers/: __init__.py  agents.py  health.py  sessions.py
backend/src/api/routers/services/: __init__.py  base.py  browser.py  code_interpreter.py  evaluations.py  gateway.py  identity.py  memory.py  observability.py  policy.py  runtime.py
backend/src/api/schemas/: session.py
backend/src/application/commands/: __init__.py
backend/src/application/handlers/: __init__.py  command_handlers.py  query_handlers.py
backend/src/application/ports/: __init__.py  agent_port.py  browser_port.py  code_interpreter_port.py  evaluations_port.py  gateway_port.py  identity_port.py  memory_port.py  observability_port.py  policy_port.py  runtime_port.py
backend/src/application/queries/: __init__.py
backend/src/application/use_cases/: send_instruction.py
backend/src/domain/entities/: message.py  session.py
backend/src/domain/events/: session_events.py
backend/src/domain/repositories/: session_repository.py
backend/src/domain/value_objects/: content.py  ids.py
backend/src/infrastructure/agents/: __init__.py  agentcore_runtime_adapter.py
backend/src/infrastructure/messaging/: __init__.py  event_publisher.py
backend/src/infrastructure/persistence/: __init__.py  event_store.py  session_repository_impl.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_event_store.py  test_handlers.py  test_session.py
docs/: PROJECT.md
docs/architecture/: bedrock-communication-sequence.md  deployment-sequence.md
docs/reports/: agentcore-runtime-implementation-report.md  poc-verification-report.md  verification-results.json
frontend/: Dockerfile  amplify.yml  amplify_outputs.json  env.example.txt  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.amplify/: tsconfig.tsbuildinfo
frontend/amplify/: backend.ts  package-lock.json  package.json  tsconfig.json
frontend/amplify/auth/: resource.ts
frontend/amplify/data/: resource.ts
frontend/amplify/functions/service-api/: handler.ts  package.json  resource.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/auth/signin/: page.tsx
frontend/src/app/benchmark/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/comparison/: page.tsx
frontend/src/app/services/browser/: page.tsx
frontend/src/app/services/code-interpreter/: page.tsx
frontend/src/app/services/evaluations/: page.tsx
frontend/src/app/services/gateway/: page.tsx
frontend/src/app/services/identity/: page.tsx
frontend/src/app/services/memory/: page.tsx
frontend/src/app/services/observability/: page.tsx
frontend/src/app/services/policy/: page.tsx
frontend/src/app/services/runtime/: page.tsx
frontend/src/entities/message/model/: types.ts
frontend/src/entities/message/ui/: message-item.tsx
frontend/src/features/auth/: index.ts
frontend/src/features/auth/ui/: auth-guard.tsx  auth-status.tsx
frontend/src/features/send-message/model/: use-send-message.ts
frontend/src/features/send-message/ui/: chat-input.tsx
frontend/src/lib/: amplify-config.ts
frontend/src/shared/api/: agentcore-client.ts  amplify-client.ts  backend-client.ts  client.ts  services-client.ts
frontend/src/shared/lib/: hooks.ts  utils.ts
frontend/src/shared/ui/: button.tsx  input.tsx
frontend/src/widgets/chat-window/: index.tsx
frontend/src/widgets/service-test/: index.tsx
frontend/src/widgets/sidebar/: index.tsx
github/workflows/: deploy-agentcore-runtime.yml
infra/cdk/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
infra/cdk/lib/: api-stack.ts  ecr-stack.ts  ecs-stack.ts  event-store-stack.ts
poc/: README.md
poc/langchain/: README.md  pyproject.toml
poc/langchain/langchain_poc/: adapter.py  example.py  tools.py
poc/langchain/src/: __init__.py  adapter.py  example.py  tools.py
poc/langchain/src/services/: __init__.py  browser.py  code_interpreter.py  evaluations.py  gateway.py  identity.py  memory.py  observability.py  policy.py  runtime.py
poc/strands-agents/: README.md  pyproject.toml
poc/strands-agents/src/: adapter.py  tools.py
poc/strands-agents/src/services/: __init__.py  browser.py  code_interpreter.py  evaluations.py  gateway.py  identity.py  memory.py  observability.py  policy.py  runtime.py
poc/strands-agents/strands_poc/: __init__.py  adapter.py  example.py  tools.py
scripts/: benchmark.py  build-and-push.sh  compare.py  deploy-aws.sh  deploy-infra.sh  deploy-services.sh  deploy_agentcore_runtime.sh  verify_implementations.py
services/: README.md
services/agentcore/: Dockerfile  README.md  agent.py  buildspec.yml  pyproject.toml  tools.py
services/langchain/: Dockerfile  README.md  agent.py  buildspec.yml  handler.py  pyproject.toml  tools.py
