[project]
name = "poc-langchain"
version = "0.1.0"
description = "LangChain / LangGraph PoC"
requires-python = ">=3.11"

dependencies = [
    # LangChain Core
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    
    # LLM Providers
    "langchain-aws>=0.2.0",
    "langchain-anthropic>=0.3.0",
    
    # Backend (workspace内依存)
    "agentcore-poc-backend",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_poc"]

[tool.uv.sources]
agentcore-poc-backend = { workspace = true }
