[project]
name = "poc-langchain"
version = "0.2.0"
description = "LangChain / LangGraph PoC - 2025年12月版"
requires-python = ">=3.11"

dependencies = [
    # LangChain Core (2025年12月版)
    "langchain>=1.1.0",
    "langgraph>=1.0.0",
    
    # LLM Providers
    "langchain-aws>=0.2.0",
    "langchain-anthropic>=0.3.0",
    
    # Backend (workspace内依存)
    "agentcore-poc-backend",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_poc"]

[tool.uv.sources]
agentcore-poc-backend = { workspace = true }
